[gd_scene load_steps=5 format=3 uid="uid://cb1yauuhqb58l"]

[ext_resource type="Texture2D" uid="uid://q6qfpo47x0b4" path="res://assets/fishing/bobber_float/bobber_red_floating_animation.png" id="1_gotua"]
[ext_resource type="Script" path="res://ui/scripts/bobber_indicator.gd" id="2_wyifi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nbu7q"]
atlas = ExtResource("1_gotua")
region = Rect2(64, 16, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1x6q"]
size = Vector2(4, 4)

[node name="BobberIndicator" type="TextureRect"]
texture = SubResource("AtlasTexture_nbu7q")
script = ExtResource("2_wyifi")

[node name="BobberArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BobberArea"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_c1x6q")

[connection signal="body_entered" from="BobberArea" to="." method="_on_bobber_area_body_entered"]
